# invoicepilot

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  justfile
docker/: Dockerfile  compose-postgres.yml  compose.yml
src/: app.rs  db.rs  log4rs.yaml  main.rs
src/auth/: drive_auth.rs  gmail_auth.rs  mod.rs  oauth.rs
src/cli/: args.rs
src/config/: env.rs
src/drive/: client.rs  folder.rs  mod.rs  upload.rs
src/gmail/: attachment.rs  client.rs  mod.rs  search.rs
src/interfaces/: tui.rs  ui.rs
src/plans/: commands.md
src/process/: jobs.rs
src/scheduler/: runner.rs
