[package]
name = "invoice-pilot"
version = "0.1.22"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bollard = "0.16"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
futures-util = "0.3"
log = "0.4.28"
log4rs = "1.4.0"
oauth2 = "4.4"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
rsa = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = { version = "0.10.9", features = ["oid"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
webbrowser = "1.0.5"

# TUI dependencies
ratatui = "0.29.0"
crossterm = "0.28.1"

# Database dependencies
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }

[dev-dependencies]
mockito = "1.7.0"
tokio-test = "0.4.4"
